Добавил секции contact-us, showcase

--- a/index.html
+++ b/index.html
@@ -278,16 +278,16 @@
               Trustpilot
             </p>
           </div>
-          <a href="#" class="rewiev">
-            <div class="rewiev__rating">
-              <ul class="rewiev__stars-list">
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+          <a href="#" class="review">
+            <div class="review__rating">
+              <ul class="review__stars-list">
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
               </ul>
-              <h3 class="rewiev__days-ago">2 days ago</h3>
+              <h3 class="review__days-ago">2 days ago</h3>
             </div>
             <h3 class="review__title">Best on the market</h3>
             <p class="review__coment">
@@ -296,16 +296,16 @@
             <div class="review__divider"></div>
             <h4 class="review__name">Worldtraveler</h4>
           </a>
-          <a href="#" class="rewiev">
-            <div class="rewiev__rating">
-              <ul class="rewiev__stars-list">
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+          <a href="#" class="review">
+            <div class="review__rating">
+              <ul class="review__stars-list">
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
               </ul>
-              <h3 class="rewiev__days-ago">2 days ago</h3>
+              <h3 class="review__days-ago">2 days ago</h3>
             </div>
             <h3 class="review__title">Best on the market</h3>
             <p class="review__coment">
@@ -314,16 +314,16 @@
             <div class="review__divider"></div>
             <h4 class="review__name">Worldtraveler</h4>
           </a>
-          <a href="#" class="rewiev">
-            <div class="rewiev__rating">
-              <ul class="rewiev__stars-list">
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+          <a href="#" class="review">
+            <div class="review__rating">
+              <ul class="review__stars-list">
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
               </ul>
-              <h3 class="rewiev__days-ago">2 days ago</h3>
+              <h3 class="review__days-ago">2 days ago</h3>
             </div>
             <h3 class="review__title">Best on the market</h3>
             <p class="review__coment">
@@ -332,16 +332,16 @@
             <div class="review__divider"></div>
             <h4 class="review__name">Worldtraveler</h4>
           </a>
-          <a href="#" class="rewiev">
-            <div class="rewiev__rating">
-              <ul class="rewiev__stars-list">
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+          <a href="#" class="review">
+            <div class="review__rating">
+              <ul class="review__stars-list">
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
               </ul>
-              <h3 class="rewiev__days-ago">2 days ago</h3>
+              <h3 class="review__days-ago">2 days ago</h3>
             </div>
             <h3 class="review__title">Best on the market</h3>
             <p class="review__coment">
@@ -350,16 +350,16 @@
             <div class="review__divider"></div>
             <h4 class="review__name">Worldtraveler</h4>
           </a>
-          <a href="#" class="rewiev">
-            <div class="rewiev__rating">
-              <ul class="rewiev__stars-list">
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
-                <img src="./images/rating.svg" alt="" class="rewiev__star" />
+          <a href="#" class="review">
+            <div class="review__rating">
+              <ul class="review__stars-list">
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
               </ul>
-              <h3 class="rewiev__days-ago">2 days ago</h3>
+              <h3 class="review__days-ago">2 days ago</h3>
             </div>
             <h3 class="review__title">Best on the market</h3>
             <p class="review__coment">
@@ -370,6 +370,112 @@
           </a>
         </div>
         <a href="#" class="review__write-btn">Write a review</a>
+      </section>
+      <section class="contact-us">
+        <h2 class="contact-us__title">Got a question? We are here to help</h2>
+        <p class="contact-us__description">
+          If you don’t find an answer in our <a href="#" class="contact-us__link"> FAQ page</a>,
+          please contact us below, our customer support is available Monday to Friday: 9am- 5pm.
+        </p>
+        <div class="contact-us__faces">
+          <img src="./images/face-1.png" alt="" class="contact-us__face" />
+          <img src="./images/face-2.png" alt="" class="contact-us__face" />
+          <img src="./images/face-3.png" alt="" class="contact-us__face" />
+          <img src="./images/face-4.png" alt="" class="contact-us__face" />
+        </div>
+        <div class="contact-us__btn-and-answer">
+          <a href="#" class="contact-us__btn">Contact us</a>
+          <p class="contact-us__answer">You’ll get a response within 24 hours</p>
+        </div>
+        <img src="./images/video-entry-product.svg" alt="" class="contact-us__img" />
+      </section>
+      <section class="hero-image"></section>
+      <section class="showcase">
+        <h2 class="showcase__title">You may also like</h2>
+        <div class="showcase__items">
+          <div class="showcase__item">
+            <img src="./images/product-img-1.png" alt="" class="showcase__img" />
+            <a href="#" class="showcase__name">Canon EOS 90D</a>
+            <p class="showcase__price">$699.99</p>
+            <div class="showcase__btn-and-review">
+              <a href="#" class="showcase__buy-btn"
+                ><span class="showcase__plus">+</span> Quick Add</a
+              >
+              <a href="#" class="showcase__review"
+                >4.2 <img src="./images/yellow-star.svg" alt="" class="showcase__review-star"
+              /></a>
+            </div>
+          </div>
+          <div class="showcase__item">
+            <img src="./images/product-img-2.png" alt="" class="showcase__img" />
+            <a href="#" class="showcase__name">Sony a1 Mirrorless Camera</a>
+            <p class="showcase__price">$799.99</p>
+            <div class="showcase__btn-and-review">
+              <a href="#" class="showcase__buy-btn"
+                ><span class="showcase__plus">+</span> Quick Add</a
+              >
+              <a href="#" class="showcase__review"
+                >4.9 <img src="./images/yellow-star.svg" alt="" class="showcase__review-star"
+              /></a>
+            </div>
+          </div>
+          <div class="showcase__item">
+            <img src="./images/product-img-3.png" alt="" class="showcase__img" />
+            <a href="#" class="showcase__name">Sony a7 III Mirrorless</a>
+            <p class="showcase__price">$649.99</p>
+            <div class="showcase__btn-and-review">
+              <a href="#" class="showcase__buy-btn"
+                ><span class="showcase__plus">+</span> Quick Add</a
+              >
+              <a href="#" class="showcase__review"
+                >3.5 <img src="./images/yellow-star.svg" alt="" class="showcase__review-star"
+              /></a>
+            </div>
+          </div>
+          <div class="showcase__item">
+            <img src="./images/product-img-4.png" alt="" class="showcase__img" />
+            <a href="#" class="showcase__name">Canon EOS 90D</a>
+            <p class="showcase__price">$699.99</p>
+            <div class="showcase__btn-and-review">
+              <a href="#" class="showcase__buy-btn"
+                ><span class="showcase__plus">+</span> Quick Add</a
+              >
+              <a href="#" class="showcase__review"
+                >4.2 <img src="./images/yellow-star.svg" alt="" class="showcase__review-star"
+              /></a>
+            </div>
+          </div>
+          <div class="showcase__item">
+            <img src="./images/product-img-1.png" alt="" class="showcase__img" />
+            <a href="#" class="showcase__name">Canon EOS 90D</a>
+            <p class="showcase__price">$599.99</p>
+            <div class="showcase__btn-and-review">
+              <a href="#" class="showcase__buy-btn"
+                ><span class="showcase__plus">+</span> Quick Add</a
+              >
+              <a href="#" class="showcase__review"
+                >4.2 <img src="./images/yellow-star.svg" alt="" class="showcase__review-star"
+              /></a>
+            </div>
+          </div>
+          <div class="showcase__item">
+            <img src="./images/product-img-2.png" alt="" class="showcase__img" />
+            <a href="#" class="showcase__name">Sony a1 Mirrorless Camera</a>
+            <p class="showcase__price">$699.99</p>
+            <div class="showcase__btn-and-review">
+              <a href="#" class="showcase__buy-btn"
+                ><span class="showcase__plus">+</span> Quick Add</a
+              >
+              <a href="#" class="showcase__review"
+                >4.9 <img src="./images/yellow-star.svg" alt="" class="showcase__review-star"
+              /></a>
+            </div>
+          </div>
+        </div>
+        <div class="showcase__swiper">
+          <a href="#" class="showcase__previous">&larr;</a>
+          <a href="#" class="showcase__next">&rarr;</a>
+        </div>
       </section>
     </div>
   </body>
