Добавил анимации и футер

--- a/index.html
+++ b/index.html
@@ -41,10 +41,30 @@
         <div class="product-information__left-side">
           <div class="product-information__images">
             <ul class="product-information__thumbnails">
-              <img src="./images/Thumbnail-1.svg" alt="" class="product-information__thumbnail" />
-              <img src="./images/Thumbnail-2.svg" alt="" class="product-information__thumbnail" />
-              <img src="./images/Thumbnail-3.svg" alt="" class="product-information__thumbnail" />
-              <img src="./images/Thumbnail-4.svg" alt="" class="product-information__thumbnail" />
+              <a href="#" class="product-information__thumbnail"
+                ><img
+                  src="./images/Thumbnail-1.svg"
+                  alt=""
+                  class="product-information__thumbnail-image"
+              /></a>
+              <a href="#" class="product-information__thumbnail"
+                ><img
+                  src="./images/Thumbnail-2.svg"
+                  alt=""
+                  class="product-information__thumbnail-image"
+              /></a>
+              <a href="#" class="product-information__thumbnail"
+                ><img
+                  src="./images/Thumbnail-3.svg"
+                  alt=""
+                  class="product-information__thumbnail-image"
+              /></a>
+              <a href="#" class="product-information__thumbnail"
+                ><img
+                  src="./images/Thumbnail-4.svg"
+                  alt=""
+                  class="product-information__thumbnail-image"
+              /></a>
             </ul>
             <img
               src="./images/Thumbnail-1.svg"
@@ -378,10 +398,19 @@
           please contact us below, our customer support is available Monday to Friday: 9am- 5pm.
         </p>
         <div class="contact-us__faces">
-          <img src="./images/face-1.png" alt="" class="contact-us__face" />
-          <img src="./images/face-2.png" alt="" class="contact-us__face" />
-          <img src="./images/face-3.png" alt="" class="contact-us__face" />
-          <img src="./images/face-4.png" alt="" class="contact-us__face" />
+          <div class="contact-us__face-item">
+            <img src="./images/face-1.png" alt="" class="contact-us__face" />
+          </div>
+          <div class="contact-us__face-item">
+            <img src="./images/face-2.png" alt="" class="contact-us__face" />
+          </div>
+          <div class="contact-us__face-item">
+            <img src="./images/face-3.png" alt="" class="contact-us__face" />
+          </div>
+          <div class="contact-us__face-item">
+            <img src="./images/face-4.png" alt="" class="contact-us__face" />
+            <div class="contact-us__online"></div>
+          </div>
         </div>
         <div class="contact-us__btn-and-answer">
           <a href="#" class="contact-us__btn">Contact us</a>
@@ -393,90 +422,144 @@
       <section class="showcase">
         <h2 class="showcase__title">You may also like</h2>
         <div class="showcase__items">
-          <div class="showcase__item">
+          <a href="#" class="showcase__item">
             <img src="./images/product-img-1.png" alt="" class="showcase__img" />
-            <a href="#" class="showcase__name">Canon EOS 90D</a>
+            <h3 class="showcase__name">Sony a1 Mirrorless Camera</h3>
             <p class="showcase__price">$699.99</p>
             <div class="showcase__btn-and-review">
-              <a href="#" class="showcase__buy-btn"
-                ><span class="showcase__plus">+</span> Quick Add</a
-              >
-              <a href="#" class="showcase__review"
-                >4.2 <img src="./images/yellow-star.svg" alt="" class="showcase__review-star"
-              /></a>
+              <h3 class="showcase__buy-btn"><span class="showcase__plus">+</span> Quick Add</h3>
+              <div class="showcase__review">
+                4.9 <img src="./images/yellow-star.svg" alt="" class="showcase__review-star" />
+              </div>
             </div>
-          </div>
-          <div class="showcase__item">
+          </a>
+          <a href="#" class="showcase__item">
             <img src="./images/product-img-2.png" alt="" class="showcase__img" />
-            <a href="#" class="showcase__name">Sony a1 Mirrorless Camera</a>
-            <p class="showcase__price">$799.99</p>
+            <h3 class="showcase__name">Sony a1 Mirrorless Camera</h3>
+            <p class="showcase__price">$499.99</p>
             <div class="showcase__btn-and-review">
-              <a href="#" class="showcase__buy-btn"
-                ><span class="showcase__plus">+</span> Quick Add</a
-              >
-              <a href="#" class="showcase__review"
-                >4.9 <img src="./images/yellow-star.svg" alt="" class="showcase__review-star"
-              /></a>
+              <h3 class="showcase__buy-btn"><span class="showcase__plus">+</span> Quick Add</h3>
+              <div class="showcase__review">
+                4.9 <img src="./images/yellow-star.svg" alt="" class="showcase__review-star" />
+              </div>
             </div>
-          </div>
-          <div class="showcase__item">
+          </a>
+          <a href="#" class="showcase__item">
             <img src="./images/product-img-3.png" alt="" class="showcase__img" />
-            <a href="#" class="showcase__name">Sony a7 III Mirrorless</a>
-            <p class="showcase__price">$649.99</p>
+            <h3 class="showcase__name">Sony a1 Mirrorless Camera</h3>
+            <p class="showcase__price">$559.99</p>
             <div class="showcase__btn-and-review">
-              <a href="#" class="showcase__buy-btn"
-                ><span class="showcase__plus">+</span> Quick Add</a
-              >
-              <a href="#" class="showcase__review"
-                >3.5 <img src="./images/yellow-star.svg" alt="" class="showcase__review-star"
-              /></a>
+              <h3 class="showcase__buy-btn"><span class="showcase__plus">+</span> Quick Add</h3>
+              <div class="showcase__review">
+                4.9 <img src="./images/yellow-star.svg" alt="" class="showcase__review-star" />
+              </div>
             </div>
-          </div>
-          <div class="showcase__item">
+          </a>
+          <a href="#" class="showcase__item">
             <img src="./images/product-img-4.png" alt="" class="showcase__img" />
-            <a href="#" class="showcase__name">Canon EOS 90D</a>
-            <p class="showcase__price">$699.99</p>
+            <h3 class="showcase__name">Sony a1 Mirrorless Camera</h3>
+            <p class="showcase__price">$679.99</p>
             <div class="showcase__btn-and-review">
-              <a href="#" class="showcase__buy-btn"
-                ><span class="showcase__plus">+</span> Quick Add</a
-              >
-              <a href="#" class="showcase__review"
-                >4.2 <img src="./images/yellow-star.svg" alt="" class="showcase__review-star"
-              /></a>
+              <h3 class="showcase__buy-btn"><span class="showcase__plus">+</span> Quick Add</h3>
+              <div class="showcase__review">
+                4.9 <img src="./images/yellow-star.svg" alt="" class="showcase__review-star" />
+              </div>
             </div>
-          </div>
-          <div class="showcase__item">
+          </a>
+          <a href="#" class="showcase__item">
             <img src="./images/product-img-1.png" alt="" class="showcase__img" />
-            <a href="#" class="showcase__name">Canon EOS 90D</a>
-            <p class="showcase__price">$599.99</p>
-            <div class="showcase__btn-and-review">
-              <a href="#" class="showcase__buy-btn"
-                ><span class="showcase__plus">+</span> Quick Add</a
-              >
-              <a href="#" class="showcase__review"
-                >4.2 <img src="./images/yellow-star.svg" alt="" class="showcase__review-star"
-              /></a>
-            </div>
-          </div>
-          <div class="showcase__item">
-            <img src="./images/product-img-2.png" alt="" class="showcase__img" />
-            <a href="#" class="showcase__name">Sony a1 Mirrorless Camera</a>
+            <h3 class="showcase__name">Sony a1 Mirrorless Camera</h3>
             <p class="showcase__price">$699.99</p>
             <div class="showcase__btn-and-review">
-              <a href="#" class="showcase__buy-btn"
-                ><span class="showcase__plus">+</span> Quick Add</a
-              >
-              <a href="#" class="showcase__review"
-                >4.9 <img src="./images/yellow-star.svg" alt="" class="showcase__review-star"
-              /></a>
+              <h3 class="showcase__buy-btn"><span class="showcase__plus">+</span> Quick Add</h3>
+              <div class="showcase__review">
+                4.9 <img src="./images/yellow-star.svg" alt="" class="showcase__review-star" />
+              </div>
             </div>
-          </div>
+          </a>
+          <a href="#" class="showcase__item">
+            <img src="./images/product-img-2.png" alt="" class="showcase__img" />
+            <h3 class="showcase__name">Sony a1 Mirrorless Camera</h3>
+            <p class="showcase__price">$779.99</p>
+            <div class="showcase__btn-and-review">
+              <h3 class="showcase__buy-btn"><span class="showcase__plus">+</span> Quick Add</h3>
+              <div class="showcase__review">
+                4.9 <img src="./images/yellow-star.svg" alt="" class="showcase__review-star" />
+              </div>
+            </div>
+          </a>
         </div>
         <div class="showcase__swiper">
           <a href="#" class="showcase__previous">&larr;</a>
           <a href="#" class="showcase__next">&rarr;</a>
         </div>
       </section>
+      <footer class="footer">
+        <div class="footer__main">
+          <div class="footer__content">
+            <a href="" class="footer__logo">
+              <img src="./images/logo-white.svg" alt="" class="footer__logo-img" />
+              <p class="footer__logo-text">Sid</p>
+            </a>
+            <p class="footer__subtitle">Sign up for news, updates & 10% off your first order.</p>
+            <div class="footer__newsletter">
+              <input type="email" placeholder="Email" class="footer__email" />
+              <a href="#" class="footer__email-eclipse">
+                <img src="./images/expand.svg" alt="" class="footer__expand" />
+              </a>
+            </div>
+            <div class="footer__social-icons">
+              <a href="" class="footer__social-link"
+                ><img src="./images/facebook.svg" alt="" class="footer__social-icon"
+              /></a>
+              <a href="" class="footer__social-link"
+                ><img src="./images/twitter.svg" alt="" class="footer__social-icon"
+              /></a>
+              <a href="" class="footer__social-link"
+                ><img src="./images/ig.svg" alt="" class="footer__social-icon"
+              /></a>
+              <a href="" class="footer__social-link"
+                ><img src="./images/yt.svg" alt="" class="footer__social-icon"
+              /></a>
+            </div>
+          </div>
+          <div class="footer__columns">
+            <div class="footer__column">
+              <h2 class="footer__title">Main Menu</h2>
+              <a href="#" class="footer__link">Shop</a>
+              <a href="#" class="footer__link">About us</a>
+              <a href="#" class="footer__link">Compare</a>
+              <a href="#" class="footer__link">FAQs</a>
+              <a href="#" class="footer__link">Contact</a>
+            </div>
+            <div class="footer__column">
+              <h2 class="footer__title">Additional Information</h2>
+              <a href="#" class="footer__link">Search</a>
+              <a href="#" class="footer__link">My Account</a>
+              <a href="#" class="footer__link">Shipping</a>
+              <a href="#" class="footer__link">Refund Policy</a>
+              <a href="#" class="footer__link">Privacy Policy</a>
+            </div>
+            <div class="footer__column">
+              <h2 class="footer__title">Extra</h2>
+              <a href="#" class="footer__link">Careers</a>
+              <a href="#" class="footer__link">Presst</a>
+              <a href="#" class="footer__link">Story</a>
+            </div>
+          </div>
+        </div>
+        <div class="footer__copyright-and-payment">
+          <p class="footer__copyright">&COPY; 2023, Pavel Popov.</p>
+          <div class="footer__payment">
+            <img src="./images/visa.png" alt="" class="footer__payment-icon" />
+            <img src="./images/mastercard.png" alt="" class="footer__payment-icon" />
+            <img src="./images/amex.png" alt="" class="footer__payment-icon" />
+            <img src="./images/paypal.png" alt="" class="footer__payment-icon" />
+            <img src="./images/diners.png" alt="" class="footer__payment-icon" />
+            <img src="./images/discover.png" alt="" class="footer__payment-icon" />
+          </div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
