Мне короче лень придумывать дизайн под мобилки и адаптировать сайт поэтому пусть пока будет так

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           /></a>
           <a href="#" class="navigation__icon-link"
             ><img src="./images/cart.svg" alt="" class="navigation__icon" />
-            <h3 class="navigation__in-cart">1</h3>
+            <h3 class="navigation__in-cart">2</h3>
           </a>
         </ul>
       </header>
@@ -137,7 +137,6 @@
               <div class="product-information__instock-quantity"></div>
               <p class="product-information__instock-currently">Currently In Stock</p>
             </div>
-
             <div class="product-information__featured-specs">
               <div class="product-information__feature">
                 <img
@@ -206,6 +205,8 @@
         </div>
       </section>
       <section class="promo-marquee">
+        <h2 class="promo-marquee__text">USE CODE FRIDAY50 FOR& 50% OFF</h2>
+        <h2 class="promo-marquee__text">USE CODE FRIDAY50 FOR& 50% OFF</h2>
         <h2 class="promo-marquee__text">USE CODE FRIDAY50 FOR& 50% OFF</h2>
         <h2 class="promo-marquee__text">USE CODE FRIDAY50 FOR& 50% OFF</h2>
         <h2 class="promo-marquee__text">USE CODE FRIDAY50 FOR& 50% OFF</h2>
@@ -298,6 +299,24 @@
               Trustpilot
             </p>
           </div>
+          <a href="#" class="review">
+            <div class="review__rating">
+              <ul class="review__stars-list">
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
+                <img src="./images/rating.svg" alt="" class="review__star" />
+              </ul>
+              <h3 class="review__days-ago">2 days ago</h3>
+            </div>
+            <h3 class="review__title">Best on the market</h3>
+            <p class="review__coment">
+              I love this product because the support is great. Please ...
+            </p>
+            <div class="review__divider"></div>
+            <h4 class="review__name">Worldtraveler</h4>
+          </a>
           <a href="#" class="review">
             <div class="review__rating">
               <ul class="review__stars-list">
