--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
               Based on <a href="#" class="review-based__link"> 456 reviews </a>
             </p>
             <p class="review-based__frame">
-              <img src="./images/Shape.svg" alt="" class="review-based__shape" />
+              <img src="./images/shape.svg" alt="" class="review-based__shape" />
               Trustpilot
             </p>
           </div>
